# bevy-cities-world

./: Cargo.toml
apps/city_world/: Cargo.toml
apps/start_menu/: Cargo.toml
apps/start_menu/data/: menu_city.json
apps/start_menu/src/: lib.rs  setup.rs  states.rs
apps/start_menu/src/actions/: mod.rs
apps/start_menu/src/menu_background/: data.rs  mod.rs  setup.rs
src/: main.rs
